# Haron

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  biome.json  ruff.toml
challenge/eth/: .gitignore  Ownable.sol  README.md  chal.py  requirements.txt
infra/: .gitignore  README.md  debug.sh  docker-compose.yml
infra/challenges/: .gitignore
infra/challenges/example/: .gitignore  README.md  build.sh  chal.py  clean.sh  config.yaml  init.sh
infra/challenges/signature-replay-bridge/: README.md  build.sh  chal.py  config.yaml  requirements.txt
infra/challenges/signature-replay-bridge/src/: Bridge.sol  IBridge.sol  Setup.sol  Token.sol
infra/forwarder/: .gitignore  Dockerfile  README.md  build.sh
infra/forwarder/src/: Makefile  forwarder  go.mod  main.go
infra/forwarder/src/service/: http_proxy.go  service.go  service_test.go  ws_forwarder.go
infra/manager/: .gitignore  Dockerfile  README.md  build.sh
infra/manager/src/: Makefile  config.go  flag.go  go.mod  go.sum  helper.go  main.go  timeout.go
infra/manager/src/integration/: challenge.go  ctfd.go  env.go  telegram.go
infra/manager/src/interop/: orchestrator.go  worker.go
infra/manager/src/types/: challenge.go  ctfd.go  pea.go
infra/manager/tests/: flag.sh
infra/mock-ctfd/: Dockerfile  app.py  build.sh
infra/orchestrator/: Cargo.toml  Dockerfile  build.sh
infra/orchestrator/src/: anvil.rs  main.rs  supervisor.rs
infra/orchestrator/src/eth/http/: handler.rs  helper.rs  mod.rs
infra/orchestrator/src/eth/ws/: handler.rs  mod.rs  session.rs
infra/orchestrator/src/types/: mod.rs
infra/orchestrator/tests/: deploystop.sh
infra/webui/: Dockerfile  nginx.conf
infra/webui/frontend/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
infra/webui/frontend/src/: App.jsx  main.jsx
infra/webui/frontend/src/components/: AnimatedCard.jsx  Authentication.jsx  ChallengePanel.jsx  InstanceInfo.jsx  Markdown.jsx  Notification.jsx
infra/webui/frontend/src/lib/: clipboard.js  shikiHighlighter.js
infra/webui/frontend/src/styles/: main.scss  notification.scss
infra/worker/: Dockerfile  build.sh
infra/worker/src/: app.py  requirements.txt
