[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"
author = "Hanz <hi@hanz.dev>"

[dependencies]
actix = "0.13"
actix-web = "4.11.0"
actix-web-actors = "4.3"
anvil = { git = "https://github.com/foundry-rs/foundry", version = "1.5.1", rev = "0cb553dcbded54464433cbc6fadd187ccd740ee4" }
anvil-core = { git = "https://github.com/foundry-rs/foundry", version = "1.5.1", rev = "0cb553dcbded54464433cbc6fadd187ccd740ee4" }
anvil-rpc = { git = "https://github.com/foundry-rs/foundry", version = "1.5.1", rev = "0cb553dcbded54464433cbc6fadd187ccd740ee4" }
eyre = "0.6"
tokio = { version = "1", features = ["sync"] }
libc = "0.2"
serde_json = "1"
futures-util = "0.3"
alloy-rpc-types = "1.0.37"
clap_builder = "4.5.48"
