[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"
author = "Hanz <hi@hanz.dev>"

[dependencies]
actix = "0.13"
actix-web = "4.11.0"
actix-web-actors = "4.3"
anvil = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.1" }
anvil-core = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.1" }
anvil-rpc = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.1" }
eyre = "0.6"
tokio = { version = "1", features = ["sync"] }
libc = "0.2"
serde_json = "1"
futures-util = "0.3"
alloy-rpc-types = "1.0.37"
clap_builder = "4.5.48"
